--- a/menu.css
+++ b/menu.css
@@ -4,16 +4,21 @@
     box-sizing: border-box;
 }
 #container{
-    
+    width: 98%
     margin: o auto;
+}
+/* header section */
+#header{
+    margin: 5px;
 }
 #header img{
     width:100%;
     max-height: 100px;
 }
+/* nav section */
 #nav{ 
 	height:30px;	
-	margin-bottom:5px;
+	margin:5px;
 	background-color: rgb(231, 183, 119);		
 	letter-spacing: 2px;
     text-align: center;
@@ -25,4 +30,36 @@
     font-weight: bolder;
     font-size: 10px;
     text-decoration: none;
+}
+#nav a:hover{
+	color: yellow;
+	text-decoration: none;
+}
+
+#aside{
+    display:flex;
+    flex-direction: row;
+    margin: 5px;
+    background-color: rgb(231, 183, 119);
+    font-size: 10px;
+}
+#aside img{
+    max-width: 180px;
+}
+#content{
+    width: ;
+    margin: 5px;
+    background-color: rgb(231, 183, 119);
+}
+#content img{
+    margin: 5px;
+    
+}
+.subcont{
+    display: flex;
+    flex-direction: row;
+}
+.subcont img{
+    max-height: 70px;
+    max-width: 65px;
 }
