--- a/menu.css
+++ b/menu.css
@@ -4,21 +4,23 @@
     box-sizing: border-box;
 }
 #container{
-    width: 98%
-    margin: o auto;
+    width: 98%;
+    margin: 0 auto;
 }
+
 /* header section */
 #header{
-    margin: 5px;
+    margin: 3px;
 }
 #header img{
     width:100%;
     max-height: 100px;
 }
+
 /* nav section */
 #nav{ 
 	height:30px;	
-	margin:5px;
+	margin:3px;
 	background-color: rgb(231, 183, 119);		
 	letter-spacing: 2px;
     text-align: center;
@@ -36,30 +38,49 @@
 	text-decoration: none;
 }
 
+/* aside section */
 #aside{
     display:flex;
     flex-direction: row;
-    margin: 5px;
+    margin: 3px;
     background-color: rgb(231, 183, 119);
     font-size: 10px;
+}
+#aside option{
+    font-size: 6px;
 }
 #aside img{
     max-width: 180px;
 }
+
+/* content section */
 #content{
-    width: ;
-    margin: 5px;
+    font-size: 10px;
+    margin: 3px;
     background-color: rgb(231, 183, 119);
 }
 #content img{
-    margin: 5px;
-    
+    margin: 3px;
 }
 .subcont{
     display: flex;
     flex-direction: row;
+    border: 1px dotted lightgrey;
+    border-radius: 10px;
+    margin: 2px;
 }
 .subcont img{
-    max-height: 70px;
-    max-width: 65px;
+    max-height: 80px;
+    max-width: 68px;
+}
+/* footer section */
+#footer{
+    height:10px;
+    background-color: rgb(231, 183, 119);
+    font-size: 6px;
+    color: white;
+    text-align: center;
+    line-height: 10px;
+    margin-left: 3px;
+    margin-right: 3px;
 }
