--- a/menu.css
+++ b/menu.css
@@ -45,6 +45,7 @@
     margin: 3px;
     background-color: rgb(231, 183, 119);
     font-size: 10px;
+    align-items: center;
 }
 #aside option{
     font-size: 6px;
@@ -62,6 +63,9 @@
 #content img{
     margin: 3px;
 }
+#content h2{
+    text-shadow: 2px 2px 2px rgb(177, 52, 202);
+}
 .subcont{
     display: flex;
     flex-direction: row;
@@ -72,6 +76,7 @@
 .subcont img{
     max-height: 80px;
     max-width: 68px;
+    border-radius: 15px;
 }
 /* footer section */
 #footer{
@@ -83,4 +88,52 @@
     line-height: 10px;
     margin-left: 3px;
     margin-right: 3px;
+}
+
+/* responsive media queries */
+/* For mobile phones: */
+[class*="col-"] {
+    width: 100%;
+  }
+  
+  @media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+    #nav{min-height: 50px; line-height: 50px;}
+    #aside{min-height: 100px; font-size: 15px;}
+    #aside img{max-height:80px; min-width:400px;}
+    #aside1{margin-left:120px;}
+    #content{min-height: 425px;}
+    #footer{min-height: 25px; line-height: 25px; font-size: 10px;}
+    .subcont{min-height: 103px; justify-content: center; align-content: center;}
+
+  }
+  @media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+    #header{margin-top: 10px;}
+    #container{max-width: 770px;}
+    .subcont{justify-content: center; align-content: center;}
 }
