--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ nav{
     background-color:rgb(255,217,144);
     font-weight: bold;
     border-radius: 5px;
+    transform:scale(1.5);
 }
 h1{
     margin:10px 20%;
@@ -79,7 +80,7 @@ h1{
     margin: 15px;
 }
 #contact img{
-    width: 80px;
+    width: 60px;
     margin: 10px;
 
 }
