--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Orelega+One&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -7,6 +8,8 @@ body{
     background: url(img/background.jpg);
     background-size: cover;
     height: 100vh;
+    font-family: 'Nunito', sans-serif;
+    color: purple;
 }
 nav{
     display: flex;
@@ -20,18 +23,33 @@ nav{
    height:30px;
    line-height: 30px;
    text-decoration: none;
-   color: black;
+   color: purple;
    transition:all 1s linear;
+   font-size: 18px;
 }
 #navbar a:hover{
-    color:purple;
+    /* color:purple; */
     background-color:rgb(255,217,144);
     font-weight: bold;
     border-radius: 5px;
     transform:scale(1.5);
 }
+#contact{
+    margin: 40px 6%;
+    font-size: 13px;
+    
+}
 #contact img{
     width: 60px;
     margin: 10px;
 
+}
+#form{
+    font-size: 13px;
+    margin: 0 6%;
+    letter-spacing: 1px; 
+}
+.subform input{
+    width:300px;
+    min-height: 30px;
 }
