--- a/contact.css
+++ b/contact.css
@@ -1,9 +1,12 @@
+/* import body font-family */
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Orelega+One&display=swap');
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
+/* body background */
 body{
     background: url(img/background.jpg);
     background-size: cover;
@@ -11,6 +14,8 @@ body{
     font-family: 'Nunito', sans-serif;
     color: purple;
 }
+
+/* navbar section styling */
 nav{
     display: flex;
     justify-content: flex-end;
@@ -28,12 +33,12 @@ nav{
    font-size: 18px;
 }
 #navbar a:hover{
-    /* color:purple; */
     background-color:rgb(255,217,144);
     font-weight: bold;
     border-radius: 5px;
     transform:scale(1.5);
 }
+/* content section */
 #contact{
     margin: 40px 6%;
     font-size: 13px;
@@ -42,7 +47,6 @@ nav{
 #contact img{
     width: 60px;
     margin: 10px;
-
 }
 #form{
     font-size: 13px;
@@ -53,3 +57,49 @@ nav{
     width:300px;
     min-height: 30px;
 }
+.subform button{
+    margin-top: 5px;
+}
+
+/* responsive media queries */
+/* For mobile phones: */
+[class*="col-"] {
+    width: 100%;
+  }
+  
+  @media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+    #main{
+        margin:0 20%;
+    }
+  }
+  @media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+    #main{
+        margin:0 35%;
+    }
+  }
