--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 body{
     background: url(img/background.jpg);
     background-size: cover;
