--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ nav{
    color: black;
    transition:all 1s linear;
 }
+
 #navbar a:hover{
     color:purple;
     background-color:rgb(255,217,144);
@@ -30,7 +31,7 @@ nav{
     border-radius: 5px;
     transform:scale(1.5);
 }
-h1{
+#h1{
     margin:10px 20%;
     text-align: center;
     padding: 10px;
