--- a/home.css
+++ b/home.css
@@ -31,8 +31,16 @@ nav{
     border-radius: 5px;
     transform:scale(1.5);
 }
-
-
+#contact{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+#contact img{
+    margin: 0 10px;
+    max-height: 20px;
+    max-width: 30px;
+}
 #content{
     min-height: 75%;
     text-align: center;
@@ -48,6 +56,7 @@ nav{
     border: 1px dotted slategray;
     border-radius: 10px;
     background-color:rgb(182, 178, 178);
+    margin-left: 15px;
 }
 #foot{
     text-align: center;
@@ -78,9 +87,7 @@ nav{
         margin-bottom: 20px;
         font-size: 50px;
     }
-    #content a{
-        font-size: 20px;
-    }
+    #content a{font-size: 20px;}
   }
   @media only screen and (min-width: 768px) {
     /* For desktop: */
