update the about page and its css

--- a/Portfolio Page_files/about.css
+++ b/Portfolio Page_files/about.css
@@ -11,7 +11,7 @@ body{
     color: purple;
 }
 /* navbar section */
-nav{
+#navbar{
     display: flex;
     justify-content: flex-end;
     margin-top:5px; 
@@ -34,39 +34,49 @@ nav{
     border-radius: 5px;
     transform:scale(1.5);
 }
-/* contact icon flex*/
-#contact{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+/* hyperlink section changes when tin the hover situation */
+#navbar a:hover{
+    color:purple;
+    background-color:rgb(255,217,144);
+    font-weight: bold;
+    border-radius: 5px;
+    transform:scale(1.5);
 }
-#contact img{
-    margin: 0 10px;
-    max-height: 20px;
-    max-width: 30px;
-}
-/* content section */
 #content{
-    min-height: 75%;
     text-align: center;
-    margin-top: 100PX;
 }
-#content h3{
-    margin-top: 20px;
-    margin-bottom: 10px;
+.introduction img{
+    width: 120px;
+    margin:5px auto;
 }
-#content a{
-    color: purple;
+#about1 h2{
+    text-align: center;
+}
+#about1 a{
+    border-radius: 5px;
+    border:1px dotted rgb(236, 173, 173);
+    background: lightgray;
     text-decoration: none;
-    border: 1px dotted slategray;
-    border-radius: 10px;
-    background-color:rgb(182, 178, 178);
-    margin-left: 15px;
+    color: purple;
+    font-size: 15px;
 }
-/* footer section */
-#foot{
-    text-align: center;
+#about1 p{
+    margin:0 10px;
+    text-align: justify;
+    letter-spacing: 1px;  
 }
+#skill img{
+    max-width: 45px;
+    max-height: 60px;
+}
+#subintro a{
+    font-size: 25px;
+    font-weight: bolder;
+    color:rgb(110, 70, 110);
+}
+
+
+
 /* For mobile phones: */
 [class*="col-"] {
     width: 100%;
@@ -86,15 +96,13 @@ nav{
     .col-s-10 {width: 83.33%;}
     .col-s-11 {width: 91.66%;}
     .col-s-12 {width: 100%;}
-    #content{ margin-top: 200PX;}
-    #content h1{font-size: 65px;}
-    #content h3{
-        margin-top: 40px;
-        margin-bottom: 20px;
-        font-size: 50px;
-    }
-    #content a{font-size: 20px;}
+    #content h1{font-size: 40px;}
+    #about1 p{margin:0 40px; font-size: 20px;}
+    /* #skill {display: flex; flex-direction: row;
+        justify-content: center; */
+    
   }
+
   @media only screen and (min-width: 768px) {
     /* For desktop: */
     .col-1 {width: 8.33%;}
@@ -109,6 +117,6 @@ nav{
     .col-10 {width: 83.33%;}
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
-    #navbar{margin-right: 40px;}
-    #contact{margin-left: 40px;}
+    #about1 p{margin:0 100px;}
+    #navbar a{font-size: 20px;}
   }
