--- a/contact.css
+++ b/contact.css
@@ -30,7 +30,8 @@ nav{
    text-decoration: none;
    color: purple;
    transition:all 1s linear;
-   font-size: 18px;
+   font-size: 15px;
+   font-weight: bolder;
 }
 #navbar a:hover{
     background-color:rgb(255,217,144);
@@ -40,12 +41,12 @@ nav{
 }
 /* content section */
 #contact{
-    margin: 40px 6%;
+    margin: 40px 4% 20px 4%;
     font-size: 13px;
     
 }
 #contact img{
-    width: 60px;
+    width: 40px;
     margin: 10px;
 }
 #form{
@@ -53,8 +54,13 @@ nav{
     margin: 0 6%;
     letter-spacing: 1px; 
 }
+#form p{
+  font-size: 20px;
+  font-weight: bold;
+  text-align:justify;
+}
 .subform input{
-    width:300px;
+    width:280px;
     min-height: 30px;
 }
 .subform button{
@@ -81,9 +87,7 @@ nav{
     .col-s-10 {width: 83.33%;}
     .col-s-11 {width: 91.66%;}
     .col-s-12 {width: 100%;}
-    #main{
-        margin:0 20%;
-    }
+    
   }
   @media only screen and (min-width: 768px) {
     /* For desktop: */
@@ -100,6 +104,6 @@ nav{
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
     #main{
-        margin:0 35%;
+        margin:0 20%;
     }
   }
