--- a/partials/_home.scss
+++ b/partials/_home.scss
@@ -26,14 +26,14 @@
             font-weight: 500;
         }
     }
-
-    a{
-        display: inline-block;
-        background-color: rgb(218, 73, 74);
-        color: #fff;
-        font-size: 15px;
-        padding: 12px 20px;
+    .home-link{
+        display:flex;
         margin-top: 17px;
+    }
+    .home-link a{
+        margin-right: 4px;
+        background-color: rgb(218, 73, 74);
+        color: #fff; 
         border-radius: 6px;
         border: 2px solid rgb(218, 73, 74);
         transition: all 0.3s ease;
@@ -41,6 +41,21 @@
         &:hover {
             color: #fff;
             background: none;
+        }
+
+        .home-social-icon{ 
+            padding-top: 2px;
+            width:45px;
+            height:40px;
+    
+            &:hover {
+                animation-name: image-jump;
+                animation-duration: 1.5s;
+            }
+        }
+        #view-my-work{
+            font-size: 15px;
+        padding: 10px 20px;
         }
     }
     
@@ -60,7 +75,7 @@
 
         a{
             font-size: 15px;
-            padding: 8px 20px;
+            padding: 4px 8px;
             }
         }
     }
