--- a/partials/_home.scss
+++ b/partials/_home.scss
@@ -37,6 +37,7 @@
         border-radius: 6px;
         border: 2px solid rgb(218, 73, 74);
         transition: all 0.3s ease;
+        height:40px;
 
         &:hover {
             color: #fff;
@@ -45,8 +46,8 @@
 
         .home-social-icon{ 
             padding-top: 2px;
-            width:45px;
-            height:40px;
+            width:35px;
+            height:35px;
     
             &:hover {
                 animation-name: image-jump;
@@ -55,7 +56,7 @@
         }
         #view-my-work{
             font-size: 15px;
-        padding: 10px 20px;
+            padding:5px 8px 10px 8px
         }
     }
     
@@ -75,7 +76,8 @@
 
         a{
             font-size: 15px;
-            padding: 4px 8px;
+            padding: 0.5px 2px;
+            height:40px;
             }
         }
     }
